fixed scrolling on mobile & moved motion variants

--- a/components/navbar/Navbar.module.scss
+++ b/components/navbar/Navbar.module.scss
@@ -80,6 +80,7 @@ position: relative;
     padding-right: 30px;
     @include vam.screens(mobile) {
     &{
+    margin:0;
     position:absolute;
     top:0;
     left:0;
